<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout_extended"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        >


        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout_extended"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <ImageView
                android:id="@+id/avatar_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_person_add_white_24dp"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.3"
                />

            <TextView
                android:id="@+id/avatar_name_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:padding="10dp"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:layout_gravity="bottom|left"
                />




        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/toggle_fav_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_star_border_white_24dp"
        app:layout_anchor="@id/app_bar_layout_extended"
        app:layout_anchorGravity="bottom|end" />
    <!-- app:layout_anchor met le toggle_fav_button en bottom|end
     sur la app bar layout id appbar_layout_extended
     -->

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/card_info"
                style="@style/CardView_Details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- app:layout_behavior= met le text sous la bar de scrolling -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!-- app:layout_behavior= met le text sous la bar de scrolling -->

                    <!-- Name -->

                    <TextView
                        android:id="@+id/avatar_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:padding="10dp"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <!-- Adress-->


                    <ImageView
                        android:id="@+id/img_adress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/avatar_name"
                        android:padding="2dp"
                        android:src="@drawable/ic_my_location_24px"
                        android:tint="#ffa500" />

                    <TextView
                        android:id="@+id/txt_adress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_adress"
                        android:layout_alignTop="@+id/img_adress"
                        android:layout_alignBottom="@+id/img_adress"
                        android:layout_toEndOf="@id/img_adress"
                        android:padding="2dp"
                        android:text="Saint pierre du mont à 5km" />


                    <!-- Phone-->

                    <ImageView
                        android:id="@+id/img_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_adress"
                        android:src="@drawable/ic_phone_24px"
                        android:tint="#ffa500"


                        />


                    <TextView
                        android:id="@+id/txt_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/img_phone"
                        android:layout_alignBottom="@+id/img_phone"
                        android:layout_toEndOf="@id/img_phone"
                        android:text="+33 6 86 57 90 14"

                        />


                    <!-- Facebook -->

                    <ImageView
                        android:id="@+id/img_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_phone"
                        android:padding="2dp"
                        android:src="@drawable/ic_public_24px"
                        android:tint="#ffa500"

                        />

                    <TextView
                        android:id="@+id/txt_facebook"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/img_facebook"
                        android:layout_alignTop="@+id/img_facebook"
                        android:layout_alignBottom="@+id/img_facebook"
                        android:layout_margin="@dimen/cardview_default_radius"
                        android:layout_toEndOf="@id/img_facebook"
                        android:text="www.facebook.fr"

                        />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/detail_card_resume"
                style="@style/CardView_Details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_info">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <!-- Title-->


                    <TextView
                        android:id="@+id/desc_card_title_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cardview_default_radius"
                        android:padding="10dp"
                        android:text="A propos de moi"
                        android:textSize="25dp"
                        android:textStyle="bold" />

                    <!-- Description-->

                    <TextView
                        android:id="@+id/des_card_txt"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_below="@id/desc_card_title_txt"
                        android:layout_margin="@dimen/appbar_padding_top"
                        android:padding="@dimen/cardview_default_radius"
                        android:text="Bonjour ! Je souhaiterais faire de la marche nordique.
Pas initiée, je recherche une ou plusieurs personnes susceptibles de m'accompagner ! J'aime les jeux de cartes tels  la belote et le tarot" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>

